...
                            <state key="normal" title="Button"/>
                            <buttonConfiguration key="configuration" style="plain" title=""/>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u4Z-xF-hce">
                            <rect key="frame" x="8.3333333333333677" y="254.6666666666666" width="56.666666666666657" height="55.666666666666657"/>
                            <color key="backgroundColor" red="0.60784313725490191" green="0.60784313729999995" blue="0.60784313725490191" alpha="1" colorSpace="calibratedRGB"/>
                            <accessibility key="accessibilityConfiguration" identifier="DEL"/>
                            <state key="normal" title="Button"/>
                            <buttonConfiguration key="configuration" style="plain" title="DEL">
                                <fontDescription key="titleFontDescription" type="system" pointSize="18"/>
                                <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </buttonConfiguration>
                            <connections>
...
