...
                                            </buttonConfiguration>
                                        </button>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mdu-5Z-ins">
                                            <rect key="frame" x="109.66666666666669" y="0.0" width="101.33333333333331" height="119.66666666666667"/>
                                            <color key="backgroundColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="calibratedRGB"/>
                                            <state key="normal" title="Button"/>
                                            <buttonConfiguration key="configuration" style="plain" title="+/-">
                                                <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
                                                <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </buttonConfiguration>
                                        </button>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ceh-iV-uX3">
                                            <rect key="frame" x="218.99999999999997" y="0.0" width="101.66666666666666" height="119.66666666666667"/>
...
